[ISSUE-126] Dark mode

--- a/app/webpacker/stylesheets/settings.scss
+++ b/app/webpacker/stylesheets/settings.scss
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
   align-content: center;
 }
@@ -63,7 +63,7 @@
 
 .repository {
   background-color: #ffffff;
-  border-radius: 5%;
+  border-radius: .25em;
   padding: .5em;
   margin: .5em;
   box-shadow: 0 2px 6px 0 rgba(0, 0%, 0%, 0.2);
@@ -171,7 +171,7 @@ input[type = text] {
 }
 
 .filter-input {
-  margin: 2em 0 2em .5em;
+  margin: 0 0 2em .5em;
 }
 
 .filter-input .icon {
@@ -207,6 +207,61 @@ input[type = text] {
 
   .settings-empty__logo {
     width: 20em;
+  }
+
+}
+
+@media (prefers-color-scheme: dark) {
+
+  .settings-header {
+    color: #ffffff;
+  }
+
+  .setttings-title {
+    color: #bd9cc4;
+  }
+
+  .organization {
+    background-color: #222527;
+  }
+
+  .organization-name {
+    color: #ffffff;
+  }
+
+  .organization-login {
+    color: #a8a6a6;
+  }
+
+  .filter-input-label {
+    color: #ccc;
+  }
+
+  input[type="text"] {
+    border: .0625em solid #ccc;
+    background-color: #222527;
+    color: #ffffff;
+  }
+
+  .filter-input .icon {
+    color: #bd9cc4;
+  }
+
+  .repository {
+    background-color: #222527;
+    color: #ffffff;
+  }
+
+  .repository-checked {
+    background-color: #66da96;
+  }
+
+  .repository-checked label {
+    color: #0c0c0d;
+  }
+
+  .settings-actions {
+    background: #222527;
   }
 
 }
